cairo_sources = [
  'cairo-analysis-surface.c',
  'cairo-arc.c',
  'cairo-array.c',
  'cairo-atomic.c',
  'cairo-base64-stream.c',
  'cairo-base85-stream.c',
  'cairo-bentley-ottmann-rectangular.c',
  'cairo-bentley-ottmann-rectilinear.c',
  'cairo-bentley-ottmann.c',
  'cairo-botor-scan-converter.c',
  'cairo-boxes-intersect.c',
  'cairo-boxes.c',
  'cairo-cache.c',
  'cairo-clip-boxes.c',
  'cairo-clip-polygon.c',
  'cairo-clip-region.c',
  'cairo-clip-surface.c',
  'cairo-clip-tor-scan-converter.c',
  'cairo-clip.c',
  'cairo-color.c',
  'cairo-composite-rectangles.c',
  'cairo-compositor.c',
  'cairo-contour.c',
  'cairo-damage.c',
  'cairo-debug.c',
  'cairo-default-context.c',
  'cairo-device.c',
  'cairo-error.c',
  'cairo-fallback-compositor.c',
  'cairo-fixed.c',
  'cairo-font-face-twin-data.c',
  'cairo-font-face-twin.c',
  'cairo-font-face.c',
  'cairo-font-options.c',
  'cairo-freed-pool.c',
  'cairo-freelist.c',
  'cairo-gstate.c',
  'cairo-hash.c',
  'cairo-hull.c',
  'cairo-image-compositor.c',
  'cairo-image-info.c',
  'cairo-image-source.c',
  'cairo-image-surface.c',
  'cairo-line.c',
  'cairo-lzw.c',
  'cairo-mask-compositor.c',
  'cairo-matrix.c',
  'cairo-mempool.c',
  'cairo-mesh-pattern-rasterizer.c',
  'cairo-misc.c',
  'cairo-mono-scan-converter.c',
  'cairo-mutex.c',
  'cairo-no-compositor.c',
  'cairo-observer.c',
  'cairo-output-stream.c',
  'cairo-paginated-surface.c',
  'cairo-path-bounds.c',
  'cairo-path-fill.c',
  'cairo-path-fixed.c',
  'cairo-path-in-fill.c',
  'cairo-path-stroke-boxes.c',
  'cairo-path-stroke-polygon.c',
  'cairo-path-stroke-traps.c',
  'cairo-path-stroke-tristrip.c',
  'cairo-path-stroke.c',
  'cairo-path.c',
  'cairo-pattern.c',
  'cairo-pen.c',
  'cairo-polygon-intersect.c',
  'cairo-polygon-reduce.c',
  'cairo-polygon.c',
  'cairo-raster-source-pattern.c',
  'cairo-recording-surface.c',
  'cairo-rectangle.c',
  'cairo-rectangular-scan-converter.c',
  'cairo-region.c',
  'cairo-rtree.c',
  'cairo-scaled-font.c',
  'cairo-shape-mask-compositor.c',
  'cairo-slope.c',
  'cairo-spans-compositor.c',
  'cairo-spans.c',
  'cairo-spline.c',
  'cairo-stroke-dash.c',
  'cairo-stroke-style.c',
  'cairo-surface-clipper.c',
  'cairo-surface-fallback.c',
  'cairo-surface-observer.c',
  'cairo-surface-offset.c',
  'cairo-surface-snapshot.c',
  'cairo-surface-subsurface.c',
  'cairo-surface-wrapper.c',
  'cairo-surface.c',
  'cairo-time.c',
  'cairo-tor-scan-converter.c',
  'cairo-tor22-scan-converter.c',
  'cairo-toy-font-face.c',
  'cairo-traps-compositor.c',
  'cairo-traps.c',
  'cairo-tristrip.c',
  'cairo-unicode.c',
  'cairo-user-font.c',
  'cairo-version.c',
  'cairo-wideint.c',
  'cairo.c',
  'cairo-cff-subset.c',
  'cairo-scaled-font-subsets.c',
  'cairo-truetype-subset.c',
  'cairo-type1-fallback.c',
  'cairo-type1-glyph-names.c',
  'cairo-type1-subset.c',
  'cairo-type3-glyph-surface.c',
  'cairo-pdf-operators.c',
  'cairo-pdf-shading.c',
  'cairo-tag-attributes.c',
  'cairo-deflate-stream.c',
]

cairo_png_sources = [
  'cairo-png.c',
]

cairo_ft_sources = [
  'cairo-ft-font.c',
]

cairo_xlib_sources = [
  'cairo-xlib-display.c',
  'cairo-xlib-core-compositor.c',
  'cairo-xlib-fallback-compositor.c',
  'cairo-xlib-render-compositor.c',
  'cairo-xlib-screen.c',
  'cairo-xlib-source.c',
  'cairo-xlib-surface.c',
  'cairo-xlib-surface-shm.c',
  'cairo-xlib-visual.c',
  'cairo-xlib-xcb-surface.c',
]

cairo_xcb_sources = [
  'cairo-xcb-connection.c',
  'cairo-xcb-connection-core.c',
  'cairo-xcb-connection-render.c',
  'cairo-xcb-connection-shm.c',
  'cairo-xcb-screen.c',
  'cairo-xcb-shm.c',
  'cairo-xcb-surface.c',
  'cairo-xcb-surface-core.c',
  'cairo-xcb-surface-render.c',
  'cairo-xcb-resources.c',
]

cairo_qt_sources = [
  'cairo-qt-surface.cpp',
]

cairo_quartz_sources = [
  'cairo-quartz-surface.c',
]

cairo_quartz_image_sources = [
  'cairo-quartz-image-surface.c',
]

cairo_quartz_font_sources = [
  'cairo-quartz-font.c',
]

cairo_win32_sources = [
  'win32/cairo-win32-debug.c',
  'win32/cairo-win32-device.c',
  'win32/cairo-win32-gdi-compositor.c',
  'win32/cairo-win32-system.c',
  'win32/cairo-win32-surface.c',
  'win32/cairo-win32-display-surface.c',
  'win32/cairo-win32-printing-surface.c',
]

cairo_win32_font_sources = [
  'win32/cairo-win32-font.c',
]

cairo_drm_sources = [
  'drm/cairo-drm.c',
  'drm/cairo-drm-bo.c',
  'drm/cairo-drm-surface.c',
  'drm/cairo-drm-intel.c',
  'drm/cairo-drm-intel-debug.c',
  'drm/cairo-drm-intel-surface.c',
  'drm/cairo-drm-i915-surface.c',
  'drm/cairo-drm-i915-glyphs.c',
  'drm/cairo-drm-i915-shader.c',
  'drm/cairo-drm-i915-spans.c',
  'drm/cairo-drm-i965-surface.c',
  'drm/cairo-drm-i965-glyphs.c',
  'drm/cairo-drm-i965-shader.c',
  'drm/cairo-drm-i965-spans.c',
  'drm/cairo-drm-intel-brw-eu.c',
  'drm/cairo-drm-intel-brw-eu-emit.c',
  'drm/cairo-drm-intel-brw-eu-util.c',
  'drm/cairo-drm-radeon.c',
  'drm/cairo-drm-radeon-surface.c',
]

cairo_gl_sources = [
  'cairo-gl-composite.c',
  'cairo-gl-device.c',
  'cairo-gl-dispatch.c',
  'cairo-gl-glyphs.c',
  'cairo-gl-gradient.c',
  'cairo-gl-info.c',
  'cairo-gl-msaa-compositor.c',
  'cairo-gl-operand.c',
  'cairo-gl-shaders.c',
  'cairo-gl-source.c',
  'cairo-gl-spans-compositor.c',
  'cairo-gl-surface.c',
  'cairo-gl-traps-compositor.c',
]

cairo_cogl_sources = [
  'cairo-cogl-surface.c',
  'cairo-cogl-gradient.c',
  'cairo-cogl-context.c',
  'cairo-cogl-utils.c',
]

cairo_directfb_sources = [
  'cairo-directfb-surface.c',
]

cairo_vg_sources = [
  'cairo-vg-surface.c',
]

cairo_script_sources = [
  'cairo-script-surface.c',
]

cairo_ps_sources = [
  'cairo-ps-surface.c',
]

cairo_pdf_sources = [
  'cairo-pdf-surface.c',
  'cairo-pdf-interchange.c',
  'cairo-tag-stack.c',
]

cairo_svg_sources = [
  'cairo-svg-surface.c',
]

cairo_egl_sources = [
  'cairo-egl-context.c',
]

cairo_glx_sources = [
  'cairo-glx-context.c',
]

cairo_wgl_sources = [
  'cairo-wgl-context.c',
]

cairo_xml_sources = [
  'cairo-xml-surface.c',
]

cairo_tee_sources = [
  'cairo-tee-surface.c',
]

cairo_no_warn_c_args = cc.get_supported_arguments([
  '-Wno-attributes',
  '-Wno-unused-but-set-variable',
  '-Wno-missing-field-initializers',
  '-Wno-unused-parameter',
  '-Wno-long-long',
])

incsrc = include_directories('.')

if feature_conf.get('CAIRO_HAS_PNG_FUNCTIONS', 0) == 1
  cairo_sources += cairo_png_sources
endif

if feature_conf.get('CAIRO_HAS_FT_FONT', 0) == 1
  cairo_sources += cairo_ft_sources
endif

if feature_conf.get('CAIRO_HAS_XLIB_SURFACE', 0) == 1
  cairo_sources += cairo_xlib_sources
endif

if feature_conf.get('CAIRO_HAS_XCB_SURFACE', 0) == 1
  cairo_sources += cairo_xcb_sources
endif

if feature_conf.get('CAIRO_HAS_QT_SURFACE', 0) == 1
  cairo_sources += cairo_qt_sources
endif

if feature_conf.get('CAIRO_HAS_QUARTZ_SURFACE', 0) == 1
  cairo_sources += cairo_quartz_sources
endif

if feature_conf.get('CAIRO_HAS_QUARTZ_IMAGE_SURFACE', 0) == 1
  cairo_sources += cairo_quartz_image_sources
endif

if feature_conf.get('CAIRO_HAS_QUARTZ_FONT', 0) == 1
  cairo_sources += cairo_quartz_font_sources
endif

if feature_conf.get('CAIRO_HAS_WIN32_SURFACE', 0) == 1
  cairo_sources += cairo_win32_sources
endif

if feature_conf.get('CAIRO_HAS_WIN32_FONT', 0) == 1
  cairo_sources += cairo_win32_font_sources
endif

if feature_conf.get('CAIRO_HAS_DRM_SURFACE', 0) == 1
  cairo_sources += cairo_drm_sources
endif

if feature_conf.get('CAIRO_HAS_GL_SURFACE', 0) == 1 or feature_conf.get('CAIRO_HAS_GLESV2_SURFACE', 0) == 1 or feature_conf.get('CAIRO_HAS_GLESV3_SURFACE', 0) == 1
  cairo_sources += cairo_gl_sources
endif

if feature_conf.get('CAIRO_HAS_COGL_SURFACE', 0) == 1
  cairo_sources += cairo_cogl_sources
endif

if feature_conf.get('CAIRO_HAS_DIRECTFB_SURFACE', 0) == 1
  cairo_sources += cairo_directfb_sources
endif

if feature_conf.get('CAIRO_HAS_VG_SURFACE', 0) == 1
  cairo_sources += cairo_vg_sources
endif

if feature_conf.get('CAIRO_HAS_SCRIPT_SURFACE', 0) == 1
  cairo_sources += cairo_script_sources
endif

if feature_conf.get('CAIRO_HAS_PS_SURFACE', 0) == 1
  cairo_sources += cairo_ps_sources
endif

if feature_conf.get('CAIRO_HAS_PDF_SURFACE', 0) == 1
  cairo_sources += cairo_pdf_sources
endif

if feature_conf.get('CAIRO_HAS_SVG_SURFACE', 0) == 1
  cairo_sources += cairo_svg_sources
endif

if feature_conf.get('CAIRO_HAS_EGL_FUNCTIONS', 0) == 1
  cairo_sources += cairo_egl_sources
endif

if feature_conf.get('CAIRO_HAS_GLX_FUNCTIONS', 0) == 1
  cairo_sources += cairo_glx_sources
endif

if feature_conf.get('CAIRO_HAS_WGL_FUNCTIONS', 0) == 1
  cairo_sources += cairo_wgl_sources
endif

if feature_conf.get('CAIRO_HAS_XML_SURFACE', 0) == 1
  cairo_sources += cairo_xml_sources
endif

if feature_conf.get('CAIRO_HAS_TEE_SURFACE', 0) == 1
  cairo_sources += cairo_tee_sources
endif

libcairo = library('cairo', cairo_sources,
  dependencies: deps,
  c_args: cairo_no_warn_c_args + pthread_c_args + ['-DHAVE_CONFIG_H'],
  cpp_args: cairo_no_warn_c_args + pthread_c_args + ['-DHAVE_CONFIG_H'],
  link_args: extra_link_args,
  include_directories: incbase,
)

configure_file(output: 'cairo-features.h', configuration: feature_conf)
